--- a/adventure/index.html
+++ b/adventure/index.html
@@ -30,6 +30,6 @@
     9.M&M Store
     10.Universal Studios Citywalk
     </p>
-    <p style="font-family: 'Times New Roman', Times, serif>Jit = anyone younger than you, Acere - Friend, No See ‘Ums - bugs that are so small you can’t see them and they bite you</p>
+    <p style="font-family: 'Times New Roman', Times, serif;"> Jit = anyone younger than you, Acere - Friend, No See ‘Ums - bugs that are so small you can’t see them and they bite you</p>
 </body>
 </html>
