--- a/adventure/index.html
+++ b/adventure/index.html
@@ -6,30 +6,47 @@
 </head>
 <h1 style="color:tomato;font-family: cursive;text-align: center;">Florida Trip</h1>
 <body style="background-color:aqua;">
+<h3>December 28th, December 29-30th, December 31st</h3>
+   
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Visit to the Beach</h2>
-<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;> December 28th, 2021 </h2>
-<p style="font-family: 'Times New Roman', Times, serif;"> </h2>We decided to sleep in the first day in Florida after two long days of driving. We then ate lunch at the VRBO and headed off to Cocoa Beach's peir and we heard some people calling eachother jit and acere. We spent a couple hours on the beach and headed back to Orlando. We decided to go out to eat and went to a nice Italian place. But we waited 2.5 hours until we were able to be served. Don't go to Capones in Kissimmee, FL, very poor service.</p>
+<ul>
+<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> December 28th, 2021 </h2>
+<li style="font-family: 'Times New Roman', Times, serif;"> </h2>We decided to sleep in the first day in Florida after two long days of driving. We then ate lunch at the VRBO and headed off to Cocoa Beach's peir and we heard some people calling eachother jit and acere. We spent a couple hours on the beach and headed back to Orlando. We decided to go out to eat and went to a nice Italian place. But we waited 2.5 hours until we were able to be served. Don't go to Capones in Kissimmee, FL, very poor service.</li>
 <p>IMAGE</p>
-<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;>Universal Orlando Day 1</h2>
-<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">December 28-29th</h2>
-<p style="font-family: 'Times New Roman', Times, serif;">We decided to go later in the day to avoid super long lines in the heat. Universal Orlando was amazing with my favorite part being Harry Potter World. We went explored all around that section, which looked like two almost functioning towns. All around the park was an amazing experience with most of the rides being amazing and beautifully decorated. I really recommend the Hagrid, Gringotts, and Velocicoster rides there exhilerating.</p>
+</ul>
+<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Universal Orlando Day 1 and 2</h2>
+<ul>
+<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">December 29-30th</h2>
+<li style="font-family: 'Times New Roman', Times, serif;">We decided to go later in the day to avoid super long lines in the heat. Universal Orlando was amazing with my favorite part being Harry Potter World. We went explored all around that section, which looked like two almost functioning towns. All around the park was an amazing experience with most of the rides being amazing and beautifully decorated. I really recommend the Hagrid, Gringotts, and Velocicoster rides there exhilerating.</li>
 <p style="font-family: 'Times New Roman', Times, serif;">IMAGE</p>
-<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;>Disney Springs</h2>
-<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;>December 30th</h2>
-<p style="font-family: 'Times New Roman', Times, serif;">We again went to disney springs later in the day so it wasn't as hot. But exploring the shops was an amazing time. All of the shops were so interesting each one having there own gimmick which made each shope unique overall the vacation was an experience I won't forget anytime soon and recommend going here and all the places previously mentioned.</p>
+</ul>
+<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Disney Springs</h2>
+<ul>
+<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">December 31st</h2>
+<li style="font-family: 'Times New Roman', Times, serif;">We again went to disney springs later in the day so it wasn't as hot. But exploring the shops was an amazing time. All of the shops were so interesting each one having there own gimmick which made each shope unique overall the vacation was an experience I won't forget anytime soon and recommend going here and all the places previously mentioned.</li>
 <p style="font-family: 'Times New Roman', Times, serif;">IMAGE</p>
+</ul>
 
-<p style="font-family: 'Times New Roman', Times, serif;">1.Harry Potter World(Universal Studios)
-    2.Hagrid’s Magical Creatures Motorbike Adventure
-    3.Harry Potter and the Escape from Gringotts™
-    4.Jurassic World VelociCoaster
-    5.Cocoa Beach Shore
-    6.Cocoa Beach Pier
-    7.Coca-Cola Store
-    8.Lego Store
-    9.M&M Store
-    10.Universal Studios Citywalk
-    </p>
-    <p style="font-family: 'Times New Roman', Times, serif;"> Jit = anyone younger than you, Acere - Friend, No See ‘Ums - bugs that are so small you can’t see them and they bite you</p>
-</body>
+    <ol style="font-family: 'Times New Roman', Times, serif;">
+        <li>Harry Potter World(Universal Studios)</li>
+        <li>Hagrid’s Magical Creatures Motorbike Adventure</li>
+        <li>Harry Potter and the Escape from Gringotts™</li>
+        <li>Jurassic World VelociCoaster</li>
+        <li>Cocoa Beach Shore</li>
+        <li>Cocoa Beach Pier</li>
+        <li>Coca-Cola Store</li>
+        <li>Lego Store</li>
+        <li>M&M Store</li>
+        <li>Universal Studios Citywalk</li>
+    </ol>
+
+        <dl style="font-family: 'Times New Roman', Times, serif;">
+          <dd>Jit</dd> 
+          <dt>- Anyone younger than you</dt> 
+          <dd>Acere</dd> 
+          <dt>- Friend</dt> 
+          <dd>No See ‘Ums</dd> 
+          <dt>- Bugs that are so small you can’t see them and they bite you</dt>
+        </dl>
+    </body>
 </html>
