--- a/adventure/index.html
+++ b/adventure/index.html
@@ -11,13 +11,13 @@
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Visit to the Beach</h2>
 <ul>
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> December 28th, 2021 </h2>
-<li style="font-family: 'Times New Roman', Times, serif;"> </h2>We decided to sleep in the first day in Florida after two long days of driving. We then ate lunch at the VRBO and headed off to Cocoa Beach's peir and we heard some people calling eachother jit and acere. We spent a couple hours on the beach and headed back to Orlando. We decided to go out to eat and went to a nice Italian place. But we waited 2.5 hours until we were able to be served. Don't go to Capones in Kissimmee, FL, very poor service.</li>
+<li style="font-family: 'Times New Roman', Times, serif;"> </h2>We decided to sleep in the first day in Florida after <em>two long days of driving.</em> We then ate lunch at the VRBO and headed off to Cocoa Beach's peir and we heard some people calling eachother jit and acere. We spent a couple hours on the beach and headed back to Orlando. We decided to go out to eat and went to a nice Italian place. But we waited 2.5 hours until we were able to be served. <strong>Don't go to Capones in Kissimmee, FL, very poor service.</strong></li>
 <p>IMAGE</p>
 </ul>
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Universal Orlando Day 1 and 2</h2>
 <ul>
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">December 29-30th</h2>
-<li style="font-family: 'Times New Roman', Times, serif;">We decided to go later in the day to avoid super long lines in the heat. Universal Orlando was amazing with my favorite part being Harry Potter World. We went explored all around that section, which looked like two almost functioning towns. All around the park was an amazing experience with most of the rides being amazing and beautifully decorated. I really recommend the Hagrid, Gringotts, and Velocicoster rides there exhilerating.</li>
+<li style="font-family: 'Times New Roman', Times, serif;">We decided to go later in the day to avoid super long lines in the heat. Universal Orlando was amazing with my favorite part being Harry Potter World. We went explored all around that section, which looked like two almost functioning towns. All around the park was an amazing experience with most of the rides being amazing and beautifully decorated.<em>I really recommend the Hagrid, Gringotts, and Velocicoster rides there exhilerating.</em></li>
 <p style="font-family: 'Times New Roman', Times, serif;">IMAGE</p>
 </ul>
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Disney Springs</h2>
