--- a/adventure/index.html
+++ b/adventure/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Daniel White - Author-->
 <title>Trip to Florida</title>
 
 </head>
 <h1 style="color:tomato;font-family: cursive;text-align: center;">Florida Trip</h1>
 <body style="background-color:aqua;">
-<h3>December 28th, December 29-30th, December 31st</h3>
-   
-<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Visit to the Beach</h2>
+<a href="#D1"<h3>December 28th</h3>, <a href="#D2"<h3>December 29-30th</h3>, <a href="#D3"<h3>December 31st</h3>
+   <!-- Day 1 Journal Entry -->
+<h2 id="D1" style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Visit to the Beach</h2>
+<!-- This is an unordered list -->
 <ul>
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> December 28th, 2021 </h2>
 <li style="font-family: 'Times New Roman', Times, serif;"> </h2>We decided to sleep in the first day in Florida after <em>two long days of driving.</em> We then ate lunch at the VRBO and headed off to Cocoa Beach's peir and we heard some people calling eachother jit and acere. We spent a couple hours on the beach and headed back to Orlando. We decided to go out to eat and went to a nice Italian place. But we waited 2.5 hours until we were able to be served. <strong>Don't go to Capones in Kissimmee, FL, very poor service.</strong></li>
 <p>IMAGE</p>
+<a href="https://www.cityofcocoabeach.com/">Visit for more information on Cocoa Beach</a>
 </ul>
-<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Universal Orlando Day 1 and 2</h2>
+<!-- Day 2,3 Journal Entry -->
+<h2 id="D2" style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Universal Orlando Day 1 and 2</h2>
+<!-- This is an unordered list -->
 <ul>
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">December 29-30th</h2>
 <li style="font-family: 'Times New Roman', Times, serif;">We decided to go later in the day to avoid super long lines in the heat. Universal Orlando was amazing with my favorite part being Harry Potter World. We went explored all around that section, which looked like two almost functioning towns. All around the park was an amazing experience with most of the rides being amazing and beautifully decorated.<em>I really recommend the Hagrid, Gringotts, and Velocicoster rides there exhilerating.</em></li>
 <p style="font-family: 'Times New Roman', Times, serif;">IMAGE</p>
+<a href="https://www.universalorlando.com/web/en/us">Visit for more information about Universal Studios Orlando</a>
 </ul>
-<h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Disney Springs</h2>
+<h2 id="D3" style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Disney Springs</h2>
+<!-- This is an unordered list -->
 <ul>
+    <!-- Day 4 Journal Entry -->
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">December 31st</h2>
 <li style="font-family: 'Times New Roman', Times, serif;">We again went to disney springs later in the day so it wasn't as hot. But exploring the shops was an amazing time. All of the shops were so interesting each one having there own gimmick which made each shope unique overall the vacation was an experience I won't forget anytime soon and recommend going here and all the places previously mentioned.</li>
 <p style="font-family: 'Times New Roman', Times, serif;">IMAGE</p>
+<a href="https://www.disneysprings.com/ ">Visit for more information on Disney Springs</a>
 </ul>
-
+<!-- This is a Ordered List -->
     <ol style="font-family: 'Times New Roman', Times, serif;">
         <li>Harry Potter World(Universal Studios)</li>
         <li>Hagrid’s Magical Creatures Motorbike Adventure</li>
@@ -39,7 +48,7 @@
         <li>M&M Store</li>
         <li>Universal Studios Citywalk</li>
     </ol>
-
+<!-- This is a description list -->
         <dl style="font-family: 'Times New Roman', Times, serif;">
           <dd>Jit</dd> 
           <dt>- Anyone younger than you</dt> 
