New hyperlink Changes

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -7,7 +7,7 @@
 </head>
 <h1 style="color:tomato;font-family: cursive;text-align: center;">Florida Trip</h1>
 <body style="background-color:aqua;">
-<a href="#D1"<h3>December 28th</h3>, <a href="#D2"<h3>December 29-30th</h3>, <a href="#D3"<h3>December 31st</h3>
+<h3><a href="#D1">December 28th</a>, <a href="#D2">December 29-30th</a>, <a href="#D3">December 31st</a></h3>
    <!-- Day 1 Journal Entry -->
 <h2 id="D1" style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Visit to the Beach</h2>
 <!-- This is an unordered list -->
