--- a/adventure/index.html
+++ b/adventure/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="keywords" content="Florida, Vacation, Trip">
+<meta name="description" content="Florida Vacation Journal">
+<meta charset="UTF-8">
+<meta name="author" content="Daniel White">
     <!-- Daniel White - Author-->
 <title>Trip to Florida</title>
 
@@ -18,7 +22,7 @@
 <a href="https://www.cityofcocoabeach.com/">Visit for more information on Cocoa Beach</a>
 </ul>
 <!-- Day 2,3 Journal Entry -->
-<h2 id="D2" style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Universal Orlando Day 1 and 2</h2>
+<h2 id="D2" style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Universal Orlando Day 1 &amp; 2</h2>
 <!-- This is an unordered list -->
 <ul>
 <h2 style="color:darkorchid;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">December 29-30th</h2>
@@ -59,5 +63,6 @@
           <dd>No See ‘Ums</dd> 
           <dt>- Bugs that are so small you can’t see them and they bite you</dt>
         </dl>
+        <p>&copy; Daniel White 2022</p>
     </body>
 </html>
