--- a/css-display-visibility/css-display-visibility.html
+++ b/css-display-visibility/css-display-visibility.html
@@ -5,8 +5,11 @@
 <style>
 div.a{visibility: hidden;}
 div.b{display:none;}
-p{display:block;}
-
+div.c{visibility:visible;}
+div.d{display:inline;}
+div.e{display:inline;}
+div.f{display:inline;}
+div.g{display:inline;}
 </style>
 </head>
 <body>
