--- a/kowloon-walled-city/kowloon-walled-city.html
+++ b/kowloon-walled-city/kowloon-walled-city.html
@@ -11,14 +11,14 @@ text-decoration: underline;}
 </head>
 <body>
 <h1>Kowloon Walled City</h1>
-<h2>History of the City</h2>
+<a href><h2>History of the City</h2></a>
 <p></p>
-<h2>Government Regulation</h2>
+<a href><h2>Government Regulation</h2></a>
 <p></p>
-<h2>Underground Economy</h2>
+<a href><h2>Underground Economy</h2></a>
 <p></p>
-<h2>Business Operations</h2>
+<a href><h2>Business Operations</h2></a>
 <p></p>
-<h2>Advantages and Disadvantages</h2>
+<a href><h2>Advantages and Disadvantages</h2></a>
 </body>
 </html>
