--- a/kowloon-walled-city/history-of-the-city.html
+++ b/kowloon-walled-city/history-of-the-city.html
@@ -9,6 +9,6 @@ h1{text-align:center;}
 <body>
 <h1>History of the City</h1>
 <p></p>
-
+<a href="https://danwhite2.github.io/webauth/kowloon-walled-city/kowloon-walled-city.html">Back to First Page</a>
 </body>
 </html>
