--- a/kowloon-walled-city/kowloon-walled-city.html
+++ b/kowloon-walled-city/kowloon-walled-city.html
@@ -11,14 +11,11 @@ text-decoration: underline;}
 </head>
 <body>
 <h1>Kowloon Walled City</h1>
-<a href><h2>History of the City</h2></a>
-<p></p>
+<a href="https://danwhite2.github.io/webauth/kowloon-walled-city/history-of-the-city.html"><h2>History of the City</h2></a>
 <a href><h2>Government Regulation</h2></a>
-<p></p>
 <a href><h2>Underground Economy</h2></a>
-<p></p>
 <a href><h2>Business Operations</h2></a>
-<p></p>
 <a href><h2>Advantages and Disadvantages</h2></a>
+
 </body>
 </html>
