--- a/css-display-visibility/css-display-visibility.html
+++ b/css-display-visibility/css-display-visibility.html
@@ -6,21 +6,27 @@
 div.a{visibility: hidden;}
 div.b{display:none;}
 div.c{visibility:visible;}
-div.d{display:inline;}
-div.e{display:inline;}
-div.f{display:inline;}
-div.g{display:inline;}
+p.g{
+    display: inline;
+}
+img.q{display:block;}
 </style>
 </head>
 <body>
     <div class="a"><h1>asdjfjdajsdjfdjajsjdfjdjsasjdf</h1></div>
     <div class="b"><h1>qywuieoryuqiwoeyruiqowryuioqywe</h1></div>
     <div class="c"><h1>vvvvvvvv,vvvvvvv,vvvvvvv,vvvvvvv</h1></div>
-    <p class="d">irate</p>
-    <p class="e">irate</p>
-    <p class="f">irate</p>
-    <p class="g">irate</p>
-    <p class="g">irate</p>
-    <p class="g">irate</p>
+    <p class="d">Monkey</p>
+    <p class="e">Monkey</p>
+    <p class="f">Monkey</p>
+    <p class="g">Monkey</p>
+    <p class="g">Monkey</p>
+    <p class="g">Monkey</p>
+   <img class="n"src="new.png">
+   <img class="m"src="new.png">
+   <img class="w"src="new.png">
+   <img class="q"src="new.png">
+   <img class="q"src="new.png">
+   <img class="q"src="new.png">
 </body>
 </html>
