--- a/nav/css-navbar-vert-about.html
+++ b/nav/css-navbar-vert-about.html
@@ -11,7 +11,7 @@ ul {
   margin: 0;
   padding: 0;
   width: 25%;
-  background-color: #f1f1f1;
+  background-color: green;
   position: fixed;
   height: 100%;
   overflow: auto;
@@ -25,12 +25,12 @@ li a {
 }
 
 li a.active {
-  background-color: #04AA6D;
+  background-color: purple;
   color: white;
 }
 
 li a:hover:not(.active) {
-  background-color: #555;
+  background-color: blue;
   color: white;
 }
 </style>
