--- a/css-final-project/index.html
+++ b/css-final-project/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <title>Travel Milwaukee</title>
 <head>
 <style>
 ul {
@@ -26,19 +27,19 @@ li a:hover {
   background-color: #111;
 }
 li a.active {
-  background-color:rgb(0, 153, 38);
+  background-color:rgb(3, 0, 201);
   color: white;}
 </style>
 </head>
 <body>
 
 <ul>
-  <li><a class="active" href="#index.html">Home</a></li>
-  <li><a href="#accomodations.html">Accomodations</a></li>
-  <li><a href="#resturants.html">Resturants</a></li>
-  <li><a href="#history.html">History</a></li>
-  <li><a href="#photos.html">Photos</a></li>
-  <li><a href="#directions.html">Directions</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="accomodations.html">Accomodations</a></li>
+  <li><a href="restaurants.html">Restaurants</a></li>
+  <li><a href="history.html">History</a></li>
+  <li><a href="photos.html">Photos</a></li>
+  <li><a href="directions.html">Directions</a></li>
 </ul>
 
 </body>
