--- a/css-final-project/index.html
+++ b/css-final-project/index.html
@@ -3,6 +3,12 @@
     <title>Travel Milwaukee</title>
 <head>
 <style>
+    html{font-family: Verdana, Geneva, Tahoma, sans-serif;}
+    .header {
+  padding-top: 20px;
+  text-align: center;
+  font-size: 40px;
+}
 ul {
   list-style-type: none;
   margin: 0;
@@ -29,10 +35,19 @@ li a:hover {
 li a.active {
   background-color:rgb(3, 0, 201);
   color: white;}
+
+  .column {
+  float: center;
+  width: 100%;
+  padding-top:20px;}
+.first{float: right;}
+.second(float:left;)
 </style>
 </head>
 <body>
-
+    <div class="header">
+        <h1>Welcome to Milwaukee</h1>
+        </div>
 <ul>
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="accomodations.html">Accomodations</a></li>
@@ -41,6 +56,15 @@ li a.active {
   <li><a href="photos.html">Photos</a></li>
   <li><a href="directions.html">Directions</a></li>
 </ul>
-
+<img class="first" src="milwaukee skyline.jpg"  width="500" height="333">
+<div class="column">
+    <p>Located on the shores of Lake Michigan Milwaukee is a place everyone should visit. With a great night life there are places to explore during the day and night. Visit the many historic sites around the city like the Historic Thrid Ward and experince the culture Milwaukee has to offer. See the Riverwalk it offers a new perspective on viewing the city. Nicknamed the City of Festivals Milwaukee has a lot of culture to offer with over 100 festivals all throughout the year any time of year there will be different cultures to explore. Visit where the Iconic brand, Harley Davidson, got it's start. If you enjoy sports you can visit the newly built Fiserv Forum to watch the Bucks or American Family Feild to watch the Brewers. You can visit an array of museums and explore many different topics. We can't forget to talk about all of the food businesses that make every trip to Milwaukee an adventure. Wether you are just visiting family or want to experience something new come on down to Milwaukee.  </p>
+  </div>
+  <img calss="second" src="thrid-ward.jpg">
+  <footer>
+    <p>&copy; 5/25/2002<br>
+    <a href="VisitMilwaukee@gmail.com">VisitMilwaukee@gmail.com</a></p>
+  </footer>  
+  
 </body>
 </html>
