--- a/css-final-project/history.html
+++ b/css-final-project/history.html
@@ -3,6 +3,12 @@
     <title>Travel Milwaukee</title>
 <head>
 <style>
+html{font-family: Verdana, Geneva, Tahoma, sans-serif;}
+    .header {
+  padding-top: 20px;
+  text-align: center;
+  font-size: 40px;
+}
 ul {
   list-style-type: none;
   margin: 0;
@@ -32,7 +38,9 @@ li a.active {
 </style>
 </head>
 <body>
-
+    <div class="header">
+        <h1>History</h1>
+        </div>
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="accomodations.html">Accomodations</a></li>
