--- a/css-final-project/index.html
+++ b/css-final-project/index.html
@@ -41,7 +41,7 @@ li a.active {
   width: 100%;
   padding-top:20px;}
 .first{float: right;}
-.second(float:left;)
+.second{float:left;}
 </style>
 </head>
 <body>
