--- a/css-final-project/photos.html
+++ b/css-final-project/photos.html
@@ -35,6 +35,15 @@ li a:hover {
 li a.active {
   background-color:rgb(3, 0, 201);
   color: white;}
+  .column1{
+  float:left;
+  width: 50%;
+  padding: 15px;}
+  .column2{
+    float:right;
+  width: 50%;
+  padding: 15px;
+  }
 </style>
 </head>
 <body>
