--- a/css-final-project/accomodations.html
+++ b/css-final-project/accomodations.html
@@ -35,6 +35,19 @@ li a:hover {
 li a.active {
   background-color:rgb(3, 0, 201);
   color: white;}
+  
+  .column1{
+  float:left;
+  width: 50%;
+  padding: 15px;}
+  .column2{
+    float:right;
+  width: 50%;
+  padding: 15px;
+  }
+  .hotel1{width:700px; height: 333px; }
+ .hotel2{width:700px; height: 333px;}
+
 </style>
 </head>
 <body>
@@ -49,6 +62,17 @@ li a.active {
   <li><a href="photos.html">Photos</a></li>
   <li><a href="directions.html">Directions</a></li>
 </ul>
+<div class="column1">
+  <p>With over a hundred hotels complexes in the Greater Milwaukee area there is always a place for you to stay no matter what time of year. Although downtown Milwaukee is the best place to stay with many historic sights right outside your window. The Pfister hotel is a historic landmark in Milwaukee after being built 129 years ago it is a great place to stay the night. And the Iron Horse hotel offers a differen type of experience with events happening throughout the week they encourage you to join.  <br><br> Top 10 Hotels <br><br> <a href="https://www.thepfisterhotel.com/">The Pfister Hotel</a><br> <a href="https://www.journeymanhotel.com/">Kimpton Journeyman Hotel</a><br> <a href="https://www.saintkatearts.com/">Saint Kate – The Arts Hotel</a><br> <a href="https://theironhorsehotel.com/">The Iron Horse Hotel</a><br> <a href="https://www.marriott.com/en-us/hotels/mkeiw-the-westin-milwaukee/overview/">The Westin Milwaukee</a><br> <a href="https://www.hilton.com/en/hotels/mkeccdt-doubletree-milwaukee-downtown/">DoubleTree</a><br> <a href="https://www.brewhousesuites.com/">The Brewhouse Inn & Suites</a><br> <a href="https://www.ambassadorhotelmke.com/">Ambassador Hotel </a><br> <a href="https://www.radissonhotelsamericas.com/en-us/hotels/radisson-wauwatosa">Radisson Hotel Milwaukee West</a><br> <a href="https://www.hyatt.com/en-US/hotel/wisconsin/hyatt-regency-milwaukee/mkerm">Hyatt Regency Milwaukee</a>
+  </p>
+</div>
 
+<div class="column">
+  <p><img class="hotel1" src="hotel1.jpg"></p> <P><img class="hotel2" src="hotel2.jpg"></p>
+</div>
+<footer>
+  <p>&copy; 5/25/2002<br>
+  <a href="VisitMilwaukee@gmail.com">VisitMilwaukee@gmail.com</a></p>
+</footer>
 </body>
 </html>
