--- a/css-final-project/history.html
+++ b/css-final-project/history.html
@@ -35,6 +35,15 @@ li a:hover {
 li a.active {
   background-color:rgb(3, 0, 201);
   color: white;}
+  .column1{
+  float:left;
+  width: 50%;
+  padding: 15px;}
+  .column2{
+    float:right;
+  width: 50%;
+  padding: 15px;
+  }
 </style>
 </head>
 <body>
@@ -51,4 +60,7 @@ li a.active {
 </ul>
 
 </body>
+<footer>
+  <p>&copy; 5/25/2002<br>
+  <a href="VisitMilwaukee@gmail.com">VisitMilwaukee@gmail.com</a></p>
 </html>
