--- a/css-final-project/restaurants.html
+++ b/css-final-project/restaurants.html
@@ -35,6 +35,18 @@ li a:hover {
 li a.active {
   background-color:rgb(3, 0, 201);
   color: white;}
+  .column1{
+  float:left;
+  width: 50%;
+  padding: 15px;}
+  .column2{
+    float:right;
+  width: 50%;
+  padding:15px ;
+  }
+  .burg{width: 500px; height: 250px; padding: 15px;}
+  .food{width: 500px; height: 250px; padding: 15px;}
+
 </style>
 </head>
 <body>
@@ -49,6 +61,17 @@ li a.active {
   <li><a href="photos.html">Photos</a></li>
   <li><a href="directions.html">Directions</a></li>
 </ul>
-
+<div class="column1">
+  <p>If you want a bite to eat Milwaukee isn't a bad place to be. Downtown is filled with many <br>resturants that will satisfy whatever craving you have. From finger food to gourmet delicacies Milwaukee offers it all. But even though people might consider the best food to be<br> downtown don't forget to stop your nearest Culvers and pick up some freshly fried cheese curds. </p>
+<p> Best Resturantsb<Br><br> <a href="https://sanfordrestaurant.com/">Sanford</a><br> <a href="https://storyhillbkc.com/">Story Hill BKC</a><br> <a href="https://www.lamerenda125.com/">La Merenda</a><br> <a href="https://oddduckrestaurant.com/">Odd Duck</a><br> <a href="https://amilinda.com/">Amilinda</a><br> <a href="https://www.ardentmke.com/">Ardent</a><br> <a href="https://lakefrontbrewery.com/">Lakefront Brewery</a><br> <a href="https://www.kopps.com/">Kopp’s Frozen Custard</a><br> <a href="https://bluesegg.com/">Blue’s Egg</a><br> <a href="https://www.culvers.com/restaurants/milwaukee-fond-du-lac?utm_source=Google&utm_medium=Maps&utm_campaign=Google+Places">Culvers</a></p>
+</div>
+<div class="column">
+  <img class="food" src="food.jpg"><img class="burg" src="burger.jpg">
+</div>
+<footer>
+  <p>&copy; 5/25/2002<br>
+  <a href="VisitMilwaukee@gmail.com">VisitMilwaukee@gmail.com</a></p>
+</footer>
 </body>
+
 </html>
