--- a/css-final-project/photos.html
+++ b/css-final-project/photos.html
@@ -58,6 +58,12 @@ li a.active {
   <li><a class="active" href="photos.html">Photos</a></li>
   <li><a href="directions.html">Directions</a></li>
 </ul>
-
+<div class="column1">
+  <p></p>
+</div>
+ 
+<div class="column">
+  <p></p>
+</div>
 </body>
 </html>
