--- a/css-final-project/photos.html
+++ b/css-final-project/photos.html
@@ -44,6 +44,7 @@ li a.active {
   width: 50%;
   padding: 15px;
   }
+  img{width:500px; padding:15px}
 </style>
 </head>
 <body>
@@ -59,11 +60,14 @@ li a.active {
   <li><a href="directions.html">Directions</a></li>
 </ul>
 <div class="column1">
-  <p></p>
+  <p><img src="amfam.jpg" alt="American Family Field">American Family Field<img src="milwaukee skyline.jpg" alt="Milwaukee Skyline">Milwaukee Skyline<img src="statefair.jpg" alt="Wisconsin State Fair">Wisconsin State Fair<img src="3rdward.jpg" alt="Historic 3rd Ward">Historic 3rd Ward<img src="brewery.jpg" alt="Miller Brewery"> Miller Brewery</p>
 </div>
  
 <div class="column">
-  <p></p>
+  <p><img src="stadium.jpg" alt="Fiserv Forum">Fiserv Forum<img src="milwaukee-lakefront.jpg" alt="Milwaukee Lakefront">Milwaukee Lakefront<img src="summerfest.jpg" alt="Summerfest"> Summerfest Grounds<img src="Art-Museum.jpg" alt="Milaukee Art Museum">Milwaukee art Museum<img src="cityhall.jpg" alt="Milwaukee City Hall">City Hall</p>
 </div>
 </body>
+<footer>
+  <p>&copy; 5/25/2002<br>
+  <a href="VisitMilwaukee@gmail.com">VisitMilwaukee@gmail.com</a></p>
 </html>
