--- a/css-final-project/directions.html
+++ b/css-final-project/directions.html
@@ -58,7 +58,12 @@ li a.active {
   <li><a href="photos.html">Photos</a></li>
   <li><a class="active" href="directions.html">Directions</a></li>
 </ul>
-
+<div class="column1">
+  <p>Milwuakee is located in Southeast Wisconsin on Lake Michigan. Milaukee is 92 miles North of Chicago and about an 1.5 hour drive from Chigaco. Milwaukee is located about 4.5 hours south east of the Twin Cities in Minnesota. Milwaukee is surrounded by Cudahy, Brown Deer, Menomonee Falls, Whitefish Bay and many more cities.</p>
+</div>
+<div class="column">
+  <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d186685.7257664536!2d-88.10805733548837!3d43.02113511995231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880502d7578b47e7%3A0x445f1922b5417b84!2sMilwaukee%2C%20WI!5e0!3m2!1sen!2sus!4v1653456540336!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+</div>
 </body>
 <footer>
   <p>&copy; 5/25/2002<br>
